--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,68 +1,63 @@
-name: Build APK and Run Python
+name: Build KivyMD APK
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:  # allows manual trigger
+  workflow_dispatch:
 
 jobs:
-  build_and_run:
+  build_apk:
     runs-on: ubuntu-latest
+    timeout-minutes: 60  # APK builds can take a long time
 
     steps:
-      # Step 1: Checkout your repository
-      - name: Checkout repo
+      # 1. Checkout repo
+      - name: Checkout Repo
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python
-      - name: Set up Python
+      # 2. Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      # Step 3: Install system dependencies for Buildozer/Android
-      - name: Install system dependencies
+      # 3. Install system dependencies
+      - name: Install Dependencies
         run: |
-          sudo apt update
-          sudo apt install -y python3-pip python3-setuptools python3-wheel build-essential \
-            git python3-virtualenv openjdk-17-jdk unzip zlib1g-dev libncurses5 libncurses5-dev \
-            libffi-dev libssl-dev autoconf automake libtool pkg-config
+          sudo DEBIAN_FRONTEND=noninteractive apt update
+          sudo DEBIAN_FRONTEND=noninteractive apt install -y \
+            python3-pip python3-setuptools python3-wheel build-essential \
+            git python3-virtualenv openjdk-17-jdk unzip zlib1g-dev \
+            libncurses5 libncurses5-dev libffi-dev libssl-dev \
+            autoconf automake libtool pkg-config
+
           pip install --upgrade pip
-
-      # Step 4: Install Python dependencies
-      - name: Install Python dependencies
-        run: |
           pip install cython==0.29.36 buildozer
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      # Step 5: Initialize Buildozer (if you don't already have a spec file)
-      - name: Initialize Buildozer
+      # 4. Prepare Buildozer
+      - name: Prepare Buildozer
         run: |
           if [ ! -f buildozer.spec ]; then buildozer init; fi
 
-      # Step 6: Build APK
+      # 5. Download Android SDK/NDK (prebuilt)
+      - name: Download Android SDK/NDK
+        run: |
+          mkdir -p android
+          cd android
+          curl -LO https://dl.google.com/android/repository/commandlinetools-linux-9123335_latest.zip
+          unzip commandlinetools-linux-9123335_latest.zip
+          yes | ./cmdline-tools/bin/sdkmanager --sdk_root=$PWD "platform-tools" "platforms;android-33" "build-tools;33.0.2" "ndk;25.2.9519653"
+          cd ..
+
+      # 6. Build APK
       - name: Build APK
         run: |
           buildozer -v android debug
 
-      # Step 7: Run main.py (optional)
-      - name: Run main.py
-        run: |
-          python main.py
-
-      # Step 8: Upload APK artifact
+      # 7. Upload APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: my-app-apk
           path: bin/*.apk
-
-      # Step 9: Upload Python logs (optional)
-      - name: Upload Python logs
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-logs
-          path: |
-            *.log
-            *.txt
